[package]
name = "roach"
version = "0.1.0"
authors = ["Sebastian Zimmer <sebastian@cryptofacilities.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "0.3"
quote = "1.0.2"
serde_yaml = "0.8"
proc-macro2 = "1.0"
Inflector = "0.11"

[dev-dependencies]
serde = "1.0"
tower-service = "0.3"
hyper = "0.13"
serde_json = "1.0"
tokio = { version = "0.2.8", features = ["full"] }